fix flex on tablet menu

--- a/src/style/sections/_nav-menu.scss
+++ b/src/style/sections/_nav-menu.scss
@@ -11,6 +11,7 @@
 	top: 0;
 	background-color: rgba(0, 0, 0, 0.4);
 	color: $color-white;
+	z-index: 999;
 
 	&__logo{
 		display: block;
@@ -122,7 +123,7 @@
 			height: calc(100vh - 170px);
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
+			justify-content: space-around;
 			align-items: center;
 			background-color: rgba(0, 0, 0, 0.95);
 			color: $color-white;
@@ -138,7 +139,6 @@
 			display: block;
 			text-align: center;
 			width: 240px;
-			height: 75px;
 			padding: 22px 0; //calc((80vh - 170px)/4);
 			font-size: 21px;
 			font-weight: 700;
